# learnopengl-examples

./: CMakeLists.txt  README.md  fips.yml
fips-files/configs/: webgl2-wasm-ninja-debug.yml  webgl2-wasm-ninja-release.yml
fips-files/verbs/: webpage.py
libs/: CMakeLists.txt
libs/fast_obj/: lopgl_fast_obj.h  readme.txt
libs/hmm/: CMakeLists.txt  HandmadeMath.c  readme.txt
libs/sokol/: CMakeLists.txt  sokol.c  sokol.m
libs/ui/: CMakeLists.txt  ui.c  ui.h
src/: CMakeLists.txt  lopgl_app.h
src/1-3-hello-window/: 1-rendering.c  CMakeLists.txt
src/1-4-hello-triangle/: 1-triangle.c  2-quad.c  2-quad.glsl  3-quad-wireframe.c  CMakeLists.txt
src/1-5-shaders/: 1-in-out.c  2-uniforms.c  2-uniforms.glsl  3-attributes.c  3-attributes.glsl  CMakeLists.txt
src/1-6-textures/: 1-texture.c  1-texture.glsl  2-texture-blend.c  3-multiple-textures.c  CMakeLists.txt
src/1-7-transformations/: 1-scale-rotate.c  2-rotate-translate.c  CMakeLists.txt
src/1-8-coordinate-systems/: 1-plane.c  2-cube.c  3-more-cubes.c  CMakeLists.txt
src/1-9-camera/: 1-lookat.c  2-walk.c  3-look.c  CMakeLists.txt  shaders.glsl
src/2-1-colors/: 1-scene.c  CMakeLists.txt  shaders.glsl
src/2-2-basic-lighting/: 1-ambient.c  1-ambient.glsl  2-diffuse.c  2-diffuse.glsl  3-specular.c  3-specular.glsl  CMakeLists.txt
src/2-3-hello-window/: 1-rendering.c  CMakeLists.txt
src/2-3-materials/: 1-material.c  1-material.glsl  2-light.c  2-light.glsl  3-light-colors.c  3-light-colors.glsl  CMakeLists.txt
src/2-4-hello-triangle/: 1-triangle.c  2-quad.c  3-quad-wireframe.c  CMakeLists.txt
src/2-4-lighting-maps/: 1-diffuse-map.c  1-diffuse-map.glsl  2-specular-map.c  2-specular-map.glsl  CMakeLists.txt  textures-assets.yml
src/2-5-light-casters/: 1-directional-light.c  1-directional-light.glsl  2-point-light.c  2-point-light.glsl  3-spot-light.c  3-spot-light.glsl  4-soft-spot-light.c  4-soft-spot-light.glsl  CMakeLists.txt
src/2-5-shaders/: 1-in-out.c  1-in-out.glsl  2-uniforms.c  3-attributes.c  CMakeLists.txt
src/2-6-multiple-lights/: 1-combined-lights.c  1-combined-lights.glsl  CMakeLists.txt
src/2-6-textures/: 1-texture.c  2-texture-blend.c  2-texture-blend.glsl  3-multiple-textures.c  3-multiple-textures.glsl  CMakeLists.txt
src/2-7-transformations/: 1-scale-rotate.c  2-rotate-translate.c  CMakeLists.txt  transformations.glsl
src/2-8-coordinate-systems/: 1-plane.c  2-cube.c  3-more-cubes.c  CMakeLists.txt
src/2-9-camera/: 1-lookat.c  2-walk.c  3-look.c  CMakeLists.txt
src/3-1-colors/: 1-colors.c  1-scene.c  CMakeLists.txt  textures-assets.yml
src/3-1-model/: 1-backpack-diffuse.c  2-backpack-lights.c  2-backpack-lights.glsl  textures-assets.yml
src/3-1-model-loading/: 1-backpack-diffuse.c  1-backpack-diffuse.glsl  2-backpack-lights.c  2-backpack-lights.glsl  CMakeLists.txt  textures-assets.yml
src/3-2-basic-lighting/: 1-ambient.c  2-diffuse.c  2-diffuse.glsl  3-specular.c  3-specular.glsl  CMakeLists.txt
src/3-3-materials/: 1-material.c  2-light.c  3-light-colors.c  CMakeLists.txt
src/3-4-lighting-maps/: 1-diffuse-map.c  1-diffuse-map.glsl  2-specular-map.c  2-specular-map.glsl  CMakeLists.txt
src/3-5-light-casters/: 1-directional-light.c  2-point-light.c  2-point-light.glsl  3-spot-light.c  3-spot-light.glsl  4-soft-spot-light.c  CMakeLists.txt
src/4-1-depth-testing/: 1-depth-always.c  2-depth-less.c  3-depth-buffer.c  3-depth-buffer.glsl  4-linear-depth-buffer.c  4-linear-depth-buffer.glsl  CMakeLists.txt  textures-assets.yml
src/4-10-instancing/: 1-instancing.c  1-instancing.glsl  2-instanced-arrays.c  2-instanced-arrays.glsl  3-asteroid-field.c  4-asteroid-field-instanced.c  4-asteroid-field-instanced.glsl  CMakeLists.txt  textures-assets.yml
src/4-11-anti-aliasing/: 1-msaa.c  1-msaa.glsl  2-offscreen-msaa.c  2-offscreen-msaa.glsl  3-grayscale-msaa.c  3-grayscale-msaa.glsl  CMakeLists.txt
src/4-2-stencil-testing/: 1-object-outlining.c  1-object-outlining.glsl  CMakeLists.txt
src/4-3-blending/: 1-grass-opaque.c  2-grass-transparent.c  2-grass-transparent.glsl  3-blending.c  4-blending-sorted.c  4-blending-sorted.glsl  CMakeLists.txt  textures-assets.yml
src/4-4-face-culling/: 1-cull-front.c  CMakeLists.txt
src/4-5-framebuffers/: 1-render-to-texture.c  1-render-to-texture.glsl  2-inversion.c  2-inversion.glsl  3-grayscale.c  3-grayscale.glsl  4-sharpen.c  4-sharpen.glsl  5-blur.c  5-blur.glsl  6-edge-detection.c  6-edge-detection.glsl  CMakeLists.txt  textures-assets.yml
src/4-6-cubemaps/: 1-skybox.c  1-skybox.glsl  2-reflection-cube.c  3-reflection-backpack.c  3-reflection-backpack.glsl  4-refraction-cube.c  4-refraction-cube.glsl  5-refraction-backpack.c  CMakeLists.txt  textures-assets.yml
src/4-8-advanced-glsl/: 1-point-size.c  1-point-size.glsl  2-frag-coord.c  2-frag-coord.glsl  3-front-facing.c  3-front-facing.glsl  4-uniform-buffers.c  4-uniform-buffers.glsl  CMakeLists.txt  textures-assets.yml
src/4-9-geometry-shader/: 1-lines.c  1-lines.glsl  2-houses.c  2-houses.glsl  3-exploding-object.c  3-exploding-object.glsl  4-visualizing-normals.c  4-visualizing-normals.glsl  CMakeLists.txt
src/5-1-advanced-lighting/: 1-blinn-phong.c  1-blinn-phong.glsl  CMakeLists.txt
src/5-2-gamma-correction/: 1-gamma-correction.c  1-gamma-correction.glsl  CMakeLists.txt
src/5-3-shadow-mapping/: 1-mapping-depth.c  1-mapping-depth.glsl  2-rendering-shadows.c  2-rendering-shadows.glsl  3-improved-shadows.c  3-improved-shadows.glsl  CMakeLists.txt  textures-assets.yml
src/5-4-point-shadows/: 1-omnidirectional-depth.c  1-omnidirectional-depth.glsl  2-omnidirectional-shadows.c  2-omnidirectional-shadows.glsl  3-omnidirectional-PCF.c  3-omnidirectional-PCF.glsl  CMakeLists.txt
src/5-5-normal-mapping/: 1-normal-mapping.c  1-normal-mapping.glsl  2-tangent-space.c  2-tangent-space.glsl  3-complex-object.c  3-complex-object.glsl  CMakeLists.txt  textures-assets.yml
src/data/: backpack.mtl  rock.mtl
src/utility/: camera.c  camera.h  fp_camera.c  fp_camera.h  orbital_camera.c  orbital_camera.h
webpage/: index.html
