# select the 3D backend for sokol_gfx.h and sokol_app.h
# the sokol_config() macro is in the top-level CMakeLists.txt file!
sokol_config()

fips_ide_group(Src/1-3-hello-window)
add_subdirectory(1-3-hello-window)
fips_ide_group(Src/1-4-hello-triangle)
add_subdirectory(1-4-hello-triangle)
fips_ide_group(Src/1-5-shaders)
add_subdirectory(1-5-shaders)
fips_ide_group(Src/1-6-textures)
add_subdirectory(1-6-textures)
fips_ide_group(Src/1-7-transformations)
add_subdirectory(1-7-transformations)
fips_ide_group(Src/1-8-coordinate-systems)
add_subdirectory(1-8-coordinate-systems)
fips_ide_group(Src/1-9-camera)
add_subdirectory(1-9-camera)
fips_ide_group(Src/2-1-colors)
add_subdirectory(2-1-colors)
fips_ide_group(Src/2-2-basic-lighting)
add_subdirectory(2-2-basic-lighting)
fips_ide_group(Src/2-3-materials)
add_subdirectory(2-3-materials)
fips_ide_group(Src/2-4-lighting-maps)
add_subdirectory(2-4-lighting-maps)
fips_ide_group(Src/2-5-light-casters)
add_subdirectory(2-5-light-casters)
fips_ide_group(Src/2-6-multiple-lights)
add_subdirectory(2-6-multiple-lights)
fips_ide_group(Src/3-1-model-loading)
add_subdirectory(3-1-model-loading)
fips_ide_group(Src/4-1-depth-testing)
add_subdirectory(4-1-depth-testing)
fips_ide_group(Src/4-2-stencil-testing)
add_subdirectory(4-2-stencil-testing)
