# select the 3D backend for sokol_gfx.h and sokol_app.h
# the sokol_config() macro is in the top-level CMakeLists.txt file!
sokol_config()

fips_ide_group(Src/1-3-hello-window)
add_subdirectory(1-3-hello-window)
fips_ide_group(Src/1-4-hello-triangle)
add_subdirectory(1-4-hello-triangle)
fips_ide_group(Src/1-5-shaders)
add_subdirectory(1-5-shaders)
fips_ide_group(Src/1-6-textures)
add_subdirectory(1-6-textures)
fips_ide_group(Src/1-7-transformations)
add_subdirectory(1-7-transformations)
fips_ide_group(Src/1-8-coordinate-systems)
add_subdirectory(1-8-coordinate-systems)
fips_ide_group(Src/1-9-camera)
add_subdirectory(1-9-camera)
fips_ide_group(Src/2-1-colors)
add_subdirectory(2-1-colors)
fips_ide_group(Src/2-2-basic-lighting)
add_subdirectory(2-2-basic-lighting)
fips_ide_group(Src/2-3-materials)
add_subdirectory(2-3-materials)
fips_ide_group(Src/2-4-lighting-maps)
add_subdirectory(2-4-lighting-maps)
fips_ide_group(Src/2-5-light-casters)
add_subdirectory(2-5-light-casters)
fips_ide_group(Src/2-6-multiple-lights)
add_subdirectory(2-6-multiple-lights)
fips_ide_group(Src/3-1-model)
add_subdirectory(3-1-model)
fips_ide_group(Src/4-1-depth-testing)
add_subdirectory(4-1-depth-testing)
fips_ide_group(Src/4-2-stencil-testing)
add_subdirectory(4-2-stencil-testing)
fips_ide_group(Src/4-3-blending)
add_subdirectory(4-3-blending)
fips_ide_group(Src/4-4-face-culling)
add_subdirectory(4-4-face-culling)
fips_ide_group(Src/4-5-framebuffers)
add_subdirectory(4-5-framebuffers)
fips_ide_group(Src/4-6-cubemaps)
add_subdirectory(4-6-cubemaps)
fips_ide_group(Src/4-8-advanced-glsl)
add_subdirectory(4-8-advanced-glsl)
fips_ide_group(Src/4-9-geometry-shader)
add_subdirectory(4-9-geometry-shader)
fips_ide_group(Src/4-10-instancing)
add_subdirectory(4-10-instancing)
fips_ide_group(Src/4-11-anti-aliasing)
add_subdirectory(4-11-anti-aliasing)
fips_ide_group(Src/5-1-advanced-lighting)
add_subdirectory(5-1-advanced-lighting)
fips_ide_group(Src/5-2-gamma-correction)
add_subdirectory(5-2-gamma-correction)
fips_ide_group(Src/5-3-shadow-mapping)
add_subdirectory(5-3-shadow-mapping)
fips_ide_group(Src/5-4-point-shadows)
add_subdirectory(5-4-point-shadows)
fips_ide_group(Src/5-5-normal-mapping)
add_subdirectory(5-5-normal-mapping)
